fixes the wrapping bug

--- a/client/css/component.css
+++ b/client/css/component.css
@@ -308,6 +308,11 @@ a.link-border:focus::before {
 	vertical-align: middle;
 }
 
+.item-text {
+	display: inline-block !important;
+	max-width: 80%;
+}
+
 .skill_tag {
     font-size: 14px;
     display: none;
@@ -343,7 +348,6 @@ a.link-border:focus::before {
 .item-icon {
 	cursor: pointer;
 	border-radius: 50;
-	width: 64px;
 	height: 64px;
 	overflow: hidden;
 	vertical-align: middle;
